--- a/app/src/main/res/layout/activity_on_board.xml
+++ b/app/src/main/res/layout/activity_on_board.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@color/colorPrimary"
     android:layout_height="match_parent"
     tools:context=".OnBoardActivity">
 
@@ -36,6 +37,9 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_signup"
+
+            app:strokeColor="@color/colorwhite"
+            app:strokeWidth="1dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -46,11 +50,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textColor="@color/colorwhite"
             android:text="@string/already_a_user"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_sigin"
             android:layout_width="wrap_content"
+            app:strokeColor="@color/colorwhite"
+            app:strokeWidth="1dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/sign_in"/>
