--- a/app/src/main/res/layout/layout_colab_list_item.xml
+++ b/app/src/main/res/layout/layout_colab_list_item.xml
@@ -7,9 +7,11 @@
     android:layout_height="wrap_content">
 
 
-    <androidx.cardview.widget.CardView
-        android:layout_margin="4dp"
-        android:elevation="2dp"
+    <com.google.android.material.card.MaterialCardView
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:cardElevation="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -19,34 +21,23 @@
             android:layout_height="match_parent">
 
                 <!--Linear Layout for title and imageview-->
-                <LinearLayout
-                    android:layout_marginTop="8dp"
 
-                    android:layout_marginRight="8dp"
-                    android:weightSum="10"
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
 
                     <TextView
+                        android:layout_marginTop="8dp"
                         android:textSize="18dp"
                         android:layout_marginLeft="16dp"
                         android:textStyle="bold"
-                        android:textColor="@color/colorPrimaryDark"
+                        android:textColor="@color/colorheading"
                         android:text="Title"
+                        android:fontFamily="sans-serif-thin"
                         android:id="@+id/colab_list_item_title"
                         android:layout_weight="9"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
-                    <ImageView
-                        android:id="@+id/colab_list_item_menu_image"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        app:srcCompat="@drawable/ic_more_horiz_accent_24dp"/>
 
-                </LinearLayout>
+
 
 
                 <TextView
@@ -62,7 +53,7 @@
 
             <LinearLayout
                 android:gravity="left"
-                android:layout_marginLeft="8dp"
+                android:layout_marginLeft="16dp"
                 android:layout_marginTop="8dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
@@ -93,7 +84,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/colab_list_item_total_members"
-                    android:text="4"/>
+                    android:text="0"/>
 
                 <ImageView
                     android:layout_marginLeft="16dp"
@@ -108,13 +99,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/colab_list_item_total_taskss"
-                    android:text="4"/>
+                    android:text="0"/>
             </LinearLayout>
 
 
             <ImageView
                     android:layout_marginTop="4dp"
-                    android:src="@drawable/imageproj1"
+                    android:src="@drawable/projmanagement2"
                     android:scaleType="fitXY"
                     android:layout_width="match_parent"
                     android:layout_height="140dp" />
@@ -144,6 +135,7 @@
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/button_colab_detail"
                     style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:layout_marginLeft="8dp"
                     android:text="Details"
@@ -151,6 +143,7 @@
                     android:layout_height="wrap_content" />
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/button_colab_edit"
                     style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:layout_marginLeft="8dp"
                     android:text="Edit"
@@ -161,6 +154,6 @@
 
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
 </LinearLayout>
