--- a/app/src/main/res/layout/layout_members_list_item.xml
+++ b/app/src/main/res/layout/layout_members_list_item.xml
@@ -12,7 +12,7 @@
         android:layout_height="70dp"
         android:elevation="8dp"
         app:cardCornerRadius="35dp"
-        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardBackgroundColor="@color/colorchip"
 
         >
 
@@ -26,7 +26,7 @@
 
             <TextView
                 android:textAlignment="center"
-                android:textColor="@color/colorRed"
+                android:textColor="@color/colorwhite"
                 android:textSize="25sp"
                 android:text="NA"
                 android:id="@+id/display_title"
