--- a/app/src/main/res/layout/layout_notes_list_item.xml
+++ b/app/src/main/res/layout/layout_notes_list_item.xml
@@ -12,15 +12,29 @@
         android:layout_margin="1dp"
         app:cardCornerRadius="2dp">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_marginLeft="8dp"
+                android:layout_gravity="center"
+                android:src="@drawable/homepage"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:scaleType="fitXY"/>
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
 
                 <TextView
                     android:layout_margin="8dp"
                     android:id="@+id/tv_item_notes_title"
+                    android:textSize="15sp"
                     android:text="Notes Title"
                     android:textStyle="bold"
                     android:layout_width="match_parent"
@@ -29,31 +43,38 @@
 
 
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="10">
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="10">
 
 
-            <TextView
-                android:layout_margin="8dp"
-                android:id="@+id/tv_item_notes_description"
-                android:maxLines="1"
-                android:layout_weight="9"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-            <ImageView
+                    <TextView
+                        android:layout_margin="8dp"
+                        android:id="@+id/tv_item_notes_description"
+                        android:maxLines="1"
+                        android:layout_weight="9"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content" />
+                    <ImageView
 
-                android:layout_weight="1"
-                android:id="@+id/btn_delete_cell_notes"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_delete_accent_24dp"/>
-        </androidx.appcompat.widget.LinearLayoutCompat>
+                        android:layout_weight="1"
+                        android:id="@+id/btn_delete_cell_notes"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/ic_delete_accent_24dp"/>
+                </androidx.appcompat.widget.LinearLayoutCompat>
 
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+
+
+        </LinearLayout>
+
+
 
     </com.google.android.material.card.MaterialCardView>
 
