--- a/app/src/main/res/layout/layout_project_details.xml
+++ b/app/src/main/res/layout/layout_project_details.xml
@@ -6,9 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_margin="4dp"
-        android:elevation="4dp"
+        app:cardElevation="4dp"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -26,16 +27,17 @@
                 <TextView
                     android:id="@+id/proj_detail_task_title"
                     android:layout_marginTop="8dp"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginLeft="16dp"
                     android:text="Task Title 1"
-                    android:textStyle="bold"
+                    android:textColor="#414fa6"
                     android:fontFamily="sans-serif-thin"
-                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:textSize="18sp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
                 <LinearLayout
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginLeft="16dp"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -47,7 +49,7 @@
                     <TextView
                         android:layout_gravity="center"
                         android:layout_marginLeft="8dp"
-                        android:textSize="17sp"
+                        android:textSize="15sp"
                         android:text="Due on:"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -56,7 +58,7 @@
                         android:id="@+id/proj_detail_due_date"
                         android:layout_gravity="center"
                         android:layout_marginLeft="8dp"
-                        android:textSize="17sp"
+                        android:textSize="15sp"
                         android:text="01-01-2019"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -68,29 +70,35 @@
 
 
             <LinearLayout
+                android:id="@+id/member_chip_layout"
                 android:layout_marginTop="8dp"
+                android:layout_marginLeft="16dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip"
-                    android:layout_marginLeft="8dp"
-                    app:chipBackgroundColor="@color/colorGreen"
+                    app:chipBackgroundColor="@color/colorchip"
+                    android:textColor="@color/colorwhite"
                     android:text="Nikhil"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
+
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip1"
                     android:layout_marginLeft="8dp"
-                    app:chipBackgroundColor="@color/colorGreen"
+                    app:chipBackgroundColor="@color/colorchip"
+                    android:textColor="@color/colorwhite"
                     android:text="Tarang"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
+
                 <com.google.android.material.chip.Chip
                     android:layout_marginLeft="8dp"
                     android:id="@+id/chip2"
-                    app:chipBackgroundColor="@color/colorGreen"
+                    app:chipBackgroundColor="@color/colorchip"
+                    android:textColor="@color/colorwhite"
                     android:text="Jay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -110,13 +118,13 @@
                     android:id="@+id/proj_detail_status_percent"
                     android:text="90"
                     android:layout_marginLeft="16dp"
-                    android:textSize="50sp"
+                    android:textSize="30sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <TextView
                     android:text="%"
-                    android:textSize="50sp"
+                    android:textSize="30sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
@@ -132,27 +140,28 @@
 
             <SeekBar
                 android:id="@+id/proj_detail_seekbar"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginBottom="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:layout_marginTop="8dp"
+                android:visibility="gone"
+                android:layout_marginLeft="16dp"
+                android:layout_marginBottom="8dp"
                 android:text="Update your progress"
+                android:id="@+id/progress_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <View
-                android:layout_marginTop="4dp"
-                android:background="@color/colorGreen"
-                android:layout_width="match_parent"
-                android:layout_height="4dp"/>
+
 
         </LinearLayout>
 
 
 
 
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
 </LinearLayout>
