--- a/app/src/main/res/layout/layout_task_list_item.xml
+++ b/app/src/main/res/layout/layout_task_list_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="120dp"
         android:elevation="5dp"
         app:cardCornerRadius="5dp"
-        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardBackgroundColor="@color/colorchip"
         >
 
         <LinearLayout
