--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,11 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">#5e72ee</item>
+        <item name="colorPrimaryDark">#5e72ee</item>
+        <item name="colorAccent">#5e72ee</item>
+
+        <!--#6990f3, #527cf0, #609ef5, #5A77dc ,#8983f1. #7675e7-->
     </style>
 
     <style name="AppTheme.NoActionBar">
