--- a/app/src/main/res/layout/fragment_add_reminder.xml
+++ b/app/src/main/res/layout/fragment_add_reminder.xml
@@ -30,7 +30,7 @@
         <Spinner
             android:id="@+id/et_add_reminder_desc"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="32dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="32dp"
@@ -39,10 +39,13 @@
             android:ems="10"
             android:hint="@string/add_description"
             android:inputType="textPersonName"
+            android:background="@drawable/spinner_layout"
             app:layout_constraintEnd_toEndOf="@+id/et_add_reminder_title"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/et_add_reminder_title"
             app:layout_constraintTop_toBottomOf="@+id/et_add_reminder_title" />
+
+        <!--height edited for spinner-->
 
         <EditText
             android:id="@+id/et_add_reminder_date"
