--- a/app/src/main/res/layout/layout_project_details.xml
+++ b/app/src/main/res/layout/layout_project_details.xml
@@ -77,39 +77,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <!--<com.google.android.material.chip.ChipGroup-->
-                    <!--android:id="@+id/chipGrp"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content">-->
-
-
-                <!--</com.google.android.material.chip.ChipGroup>-->
-
-                <!--<com.google.android.material.chip.Chip-->
-                    <!--android:id="@+id/chip"-->
-                    <!--app:chipBackgroundColor="@color/colorchip"-->
-                    <!--android:textColor="@color/colorwhite"-->
-                    <!--android:text="Nikhil"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content" />-->
-
-                <!--<com.google.android.material.chip.Chip-->
-                    <!--android:id="@+id/chip1"-->
-                    <!--android:layout_marginLeft="8dp"-->
-                    <!--app:chipBackgroundColor="@color/colorchip"-->
-                    <!--android:textColor="@color/colorwhite"-->
-                    <!--android:text="Tarang"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content" />-->
-
-                <!--<com.google.android.material.chip.Chip-->
-                    <!--android:layout_marginLeft="8dp"-->
-                    <!--android:id="@+id/chip2"-->
-                    <!--app:chipBackgroundColor="@color/colorchip"-->
-                    <!--android:textColor="@color/colorwhite"-->
-                    <!--android:text="Jay"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content" />-->
 
             </LinearLayout>
 
@@ -122,46 +89,55 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/proj_detail_status_percent"
-                    android:text="90"
-                    android:layout_marginLeft="16dp"
-                    android:textSize="30sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
 
-                <TextView
-                    android:text="%"
-                    android:textSize="30sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                <com.github.mikephil.charting.charts.PieChart
+                    android:id="@+id/pieChart"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp">
 
-                <TextView
-                    android:text="Completed"
-                    android:layout_marginLeft="16dp"
-                    android:textSize="18sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                </com.github.mikephil.charting.charts.PieChart>
+
+                <LinearLayout
+                    android:layout_marginTop="30dp"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_gravity="center_vertical"
+                        android:text="6 days to complete the task!"
+                        android:layout_marginLeft="16dp"
+                        android:textSize="16sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+
+                    <SeekBar
+                        android:layout_marginVertical="30dp"
+                        android:id="@+id/proj_detail_seekbar"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginBottom="16dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+
+                    <TextView
+                        android:visibility="visible"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginBottom="8dp"
+                        android:text="Update your progress"
+                        android:id="@+id/progress_message"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+
+
 
 
             </LinearLayout>
 
-            <SeekBar
-                android:id="@+id/proj_detail_seekbar"
-                android:layout_marginTop="16dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginBottom="16dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:visibility="gone"
-                android:layout_marginLeft="16dp"
-                android:layout_marginBottom="8dp"
-                android:text="Update your progress"
-                android:id="@+id/progress_message"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
 
 
 
