--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">#5e72ee</item>
         <item name="colorPrimaryDark">#5e72ee</item>
         <item name="colorAccent">#5e72ee</item>
+        <item name="android:windowDisablePreview">true</item>
 
         <!--#6990f3, #527cf0, #609ef5, #5A77dc ,#8983f1. #7675e7-->
     </style>
@@ -13,6 +14,7 @@
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:windowDisablePreview">true</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" >
