--- a/app/src/main/res/layout/layout_project_details.xml
+++ b/app/src/main/res/layout/layout_project_details.xml
@@ -85,6 +85,7 @@
 
             <LinearLayout
                 android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -92,18 +93,19 @@
 
                 <com.github.mikephil.charting.charts.PieChart
                     android:id="@+id/pieChart"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp">
+                    android:layout_width="130dp"
+                    android:layout_height="130dp">
 
                 </com.github.mikephil.charting.charts.PieChart>
 
                 <LinearLayout
-                    android:layout_marginTop="30dp"
+
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:id="@+id/days_left"
                         android:layout_gravity="center_vertical"
                         android:text="6 days to complete the task!"
                         android:layout_marginLeft="16dp"
@@ -117,10 +119,8 @@
                         android:id="@+id/proj_detail_seekbar"
                         android:layout_marginTop="16dp"
                         android:layout_marginLeft="8dp"
-                        android:layout_marginBottom="16dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
-
 
                     <TextView
                         android:visibility="visible"
@@ -130,6 +130,7 @@
                         android:id="@+id/progress_message"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
+
 
                 </LinearLayout>
 
